[*] DatePicker: updates   - Fix docs   - Add alignment between the days of the week and the Calendar grid   - Add simple title variant in Calendar demo   - Add css for Calendar title   - Update time crate version (support PartialOrd for Month)   - Fix view day on next/previous button click   - Fix DateRangePickerContext (sync data)   - Fix arrow navigation

--- a/preview/src/components/calendar/style.css
+++ b/preview/src/components/calendar/style.css
@@ -59,6 +59,14 @@
     cursor: not-allowed;
 }
 
+.calendar-month-title {
+    display: flex;
+    width: 100%;
+    height: 1.75rem;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Calendar Grid */
 .calendar-div {
     display: flex;
@@ -77,7 +85,7 @@
 }
 
 .calendar-grid-day-header {
-    width: 2rem;
+    flex: 1;
     color: var(--secondary-color-5);
     font-size: 12px;
     font-weight: 300;
